# python-project-lvl4

./: .gitignore  Makefile  Procfile  README.md  db.sqlite3  pyproject.toml  requirements.txt
.github/workflows/: hexlet-check.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: settings.py  urls.py  utils.py  views.py
task_manager/labels/: models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/templates/: label_create_form.html  label_delete_form.html  label_list.html  label_update_form.html
task_manager/statuses/: models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_rename_name_status_name.py
task_manager/statuses/templates/: status_create_form.html  status_delete_form.html  status_list.html  status_update_form.html
task_manager/tasks/: models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_created_at.py  0003_task_labels.py  0004_alter_task_labels.py  0005_alter_task_labels.py
task_manager/tasks/templates/: task_create_form.html  task_delete_form.html  task_detail_form.html  task_list.html  task_update_form.html
task_manager/templates/task_manager/: base.html  index.html  login.html
task_manager/users/: models.py  urls.py  views.py
task_manager/users/templates/auth/: user_confirm_delete.html  user_form.html  user_list.html  user_update.html
